--- a/webpersonal/core/templates/core/contact.html
+++ b/webpersonal/core/templates/core/contact.html
@@ -1,16 +1,22 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Web personal</title>
-</head>
-<body>
-	{% extends 'core/base.html' %}
+{% extends 'core/base.html' %}
 
-	{% block content %}
+{% block title %}Contacto{% endblock %}
 
-	<h2>Contacto</h2>
-	<p>Este es mi correo electronico: <b><i>christianrmoran86@gmail.com</i></b></p>
+{% block background %}{% load static %}{% static 'core/img/contact-bg.jpg' %}{% endblock %}
 
-	{% endblock %}
-</body>
-</html>
+{% block headers %}
+	<h1>Contacto</h1>
+    <span class="subheading">Asesoría</span>
+{% endblock %}
+
+{% block content %} 
+<div class="row">
+	<div class="col-lg-8 col-md-10 mx-auto">
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
+	<br>
+		<p><b>Teléfono:</b> +09 876 543 210</p>
+		<p><b>Honorarios:</b> 60€/h (precio base)</p>
+	</div>
+</div>
+{% endblock %}
+
