--- a/webpersonal/core/templates/core/base.html
+++ b/webpersonal/core/templates/core/base.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Mi Web Personal</title>
+    <title>{% block title %}{% endblock %} | Mi Web Personal</title>
 </head>
 <body>
     <h1>Mi Web Personal</h1>
     <ul>
-        <li><a href="/">Portada</a></li>
-        <li><a href="/about/">Acerca de</a></li>
-        <li><a href="/portfolio/">Portafolio</a></li>
-        <li><a href="/contact/">Contacto</a></li>
+        <li><a href="{% url 'home' %}">Portada</a></li>
+        <li><a href="{% url 'about' %}">Acerca de</a></li>
+        <li><a href="{% url 'portfolio' %}">Portafolio</a></li>
+        <li><a href="{% url 'contact' %}">Contacto</a></li>
     </ul>
 
     {% block content %}{% endblock %}
