--- a/webpersonal/core/templates/core/home.html
+++ b/webpersonal/core/templates/core/home.html
@@ -1,11 +1,12 @@
 {% extends 'core/base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Portada{% endblock %}
 
-{% block content %}
-    <h1>Mi Web Personal</h1>
+{% block background %}{% load static %}{% static 'core/img/home-bg.jpg' %}{% endblock %}
 
-    <h2>Bienvenidos</h2>
 
-    <p>Esto es la portada.</p>
+{% block headers %}
+    <h1>Juan Pérez</h1>
+    <span class="subheading">Ingeniero Industrial</span>
 {% endblock %}
+
