--- a/webpersonal/core/templates/core/contact.html
+++ b/webpersonal/core/templates/core/contact.html
@@ -2,10 +2,22 @@
 
 {% block title %}Contact{% endblock %}
 
+{% block background %}{% load static %}{% static 'core/img/contact-bg.jpg' %}{% endblock %}
+
+
+{% block headers %}
+    <h1>Contacto</h1>
+    <span class="subheading">Asesoría</span>
+{% endblock %}
+
+
 {% block content %}
-    <h1>Mi Web Personal</h1>
-
-    <h2>Contact</h2>
-
-    <p>Email: christianrmoran86@gmail.com</p>
+<div class="row">
+    <div class="col-lg-8 col-md-10 mx-auto">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
+        <br>
+        <p><b>Teléfono:</b> +09 876 543 210</p>
+        <p><b>Honorarios:</b> 60€/h (precio base)</p>
+    </div>
+</div>
 {% endblock %}
