--- a/webpersonal/core/templates/core/portfolio.html
+++ b/webpersonal/core/templates/core/portfolio.html
@@ -2,10 +2,39 @@
 
 {% block title %}portfolio{% endblock %}
 
+
+{% block background %}{% load static %}{% static 'core/img/portfolio-bg.jpg' %}{% endblock %}
+
+{% block headers %}
+    <h1>Portafolio</h1>
+    <span class="subheading">Currículo</span>
+{% endblock %}
+
+
 {% block content %}
-    <h1>Mi Web Personal</h1>
+	      <!-- Proyecto -->
+<div class="row project">
+<div class="col-lg-3 col-md-4 offset-lg-1">
+			      <img class="img-fluid" src="{% static 'core/img/about-bg.jpg' %}" alt="">
+	      	</div>
+	        <div class="col-lg-7 col-md-8">
+	      		<h2 class="section-heading title">Segundo proyecto</h2>
+	          <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm....</p>
+	          <p><a href="http://google.com">Más información</a></p>
+	      	</div>
+</div>
 
-    <h2>Portfolio</h2>
+	      <!-- Proyecto -->
+<div class="row project">
+	      	<div class="col-lg-3 col-md-4 offset-lg-1">
+			      <img class="img-fluid" src="{% static 'core/img/home-bg.jpg' %}" alt="">
+	      	</div>
+	        <div class="col-lg-7 col-md-8">
+	      		<h2 class="section-heading title">Primer proyecto</h2>
+	          <p>As we got further and further away, it [the Earth] diminished in size. Finally it shrank to the size of a marble, the most beautiful you can imagine. That beautiful, warm....</p>
+	          <p><a href="http://google.com">Más información</a></p>
+	      	</div>
+</div>
 
-    <p>These are some of my projects</p>
+
 {% endblock %}
