--- a/webempresa/blog/templates/blog/category.html
+++ b/webempresa/blog/templates/blog/category.html
@@ -5,7 +5,7 @@
 {% block title %}Blog{% endblock %}
 
 {% block content %}
-  {% for post in posts %}
+  {% for post in category.get_posts.all %}
   <section class="page-section cta">
     <div class="container">
       <div class="row">
@@ -18,9 +18,7 @@
             <p class="mb-0">
               <img class="mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="{{post.image.url}}" alt="">
             </p>
-            <p class="mb-0 mbt">
-              {{post.content | linebreaks}}
-            </p>
+            <p class="mb-0 mbt">{{post.content | linebreaks}}</p>
             <p class="mb-0 mbt">
               <span class="section-heading-under">Publicado por <em><b>{{post.author}}</b></em> en
                <em>
