--- a/webempresa/pages/templates/pages/sample.html
+++ b/webempresa/pages/templates/pages/sample.html
@@ -16,7 +16,10 @@
                                 {{page.title}}</span>
                         </h2>
                         <div class="section-content">
-                            {{page.content|linebreaks}}
+                            {{page.content|safe}}
+                            {% if user.is_authenticated %}
+                                <p><a href="{% url 'admin:pages_page_change' page.id %}">Editar</a></p>
+                                {% endif %}
                         </div>
                     </div>
                 </div>
