--- a/webempresa/contact/templates/contact/contact.html
+++ b/webempresa/contact/templates/contact/contact.html
@@ -17,6 +17,21 @@
               <span class="section-heading-lower">Contacto</span>
             </h2>
             <!-- Formulario de contacto -->
+            {% if 'ok' in request.GET %}
+              <p><b>Su mensaje se ha enviado correctamente, en breve nos pondremos en contacto con usted.</b></p>
+
+            {% endif %}
+
+            <form action="" method="POST">
+              {% csrf_token %}
+
+              <table>
+                {{form.as_table}}
+              </table>
+
+              <input type="submit" value="Enviar" />
+            </form>
+              <!--
             <form>
                 <div class="form-group">
                     <label>Nombre *</label>
@@ -42,7 +57,7 @@
                 <div class="text-center">
                     <input type="submit" class="btn btn-primary btn-block py-2" value="Enviar">
                 </div>
-            </form>
+            </form> -->
             <!-- Fin formulario de contacto -->
           </div>
         </div>
